# llm-agent-harness

./: Dockerfile  README.md  echo-smoke.jsonl  pricing.json  pyproject.toml  rag_tasks.jsonl
agent_harness/: __init__.py  cli.py  compare.py  core.py  dashboard.py  determinism.py  eval.py  llm.py  model_registry.py  rag.py  rag_eval.py  tools.py  trace.py
comparisons/: comparison-20260701T043646Z.json  comparison-20260701T043646Z.md  comparison-20260701T055322Z.md
configs/: mcp.example.json  mcp.github.example.json  models.json
dashboard/: index.html
determinism/: determinism-20260629T144535Z.jsonl  determinism-20260629T144535Z.md
evals/: README.md  pricing.json  tasks.jsonl
llm_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notes/: deepseek-test.md  eval-system-summary.md  eval-write-test.md  exact-output.json  readme-title.txt
providers/: __init__.py  anthropic.py  azure_openai.py  base.py  deepseek.py  echo.py  gemini.py  groq.py  ollama.py  openai.py  openai_compatible.py
rag/: index.json
runs/: 20260629T144052Z-741e8559.json  20260629T144052Z-c24bff5d.json  20260629T144052Z-e7852b63.json  20260629T144330Z-76e34e3b.json  20260629T144336Z-05e92303.json  20260629T144341Z-23f67c14.json  20260629T144347Z-1050813b.json  20260629T144352Z-f3d88320.json  20260629T144400Z-364ca70b.json  20260629T144408Z-00d550cb.json  20260629T144414Z-ce47dc43.json  20260629T144419Z-729d9bdf.json  20260629T144425Z-2c212b18.json  20260629T144430Z-03e7282d.json  20260629T144436Z-efd1ba11.json  20260629T144442Z-7380e6c7.json  (+46 more)
(+144 files in other folders)
